# cis194-solutions

./: .gitignore  CHANGELOG.md  Haskell-Course.cabal  README.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Hw01.hs  Hw04.hs  Hw10.hs
src/Hw02/: Log.hs  LogAnalysis.hs
src/Hw03/: Golf.hs
src/Hw07/: Buffer.hs  Editor.hs  JoinList.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
