cabal-version:      2.4
name:               Haskell-Course
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , mtl
    hs-source-dirs:   src
    exposed-modules:    Hw01
                        Hw02.Log
                        Hw02.LogAnalysis
                        Hw03.Golf
                        Hw04
                        Hw07.Buffer
                        Hw07.Editor
                        Hw07.JoinList
                        Hw07.Sized
                        Hw07.StringBufEditor
                        Hw07.StringBuffer
    default-language: Haskell2010

executable Haskell-Course
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: 


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , Haskell-Course
    hs-source-dirs:   app
    default-language: Haskell2010
